--- a/实验恩.md
+++ b/实验恩.md
@@ -1,4 +1,4 @@
-####【带卡】孩子如果不听话打一顿就好了
+# 【带卡】孩子如果不听话打一顿就好了
 
  **概要**：性感带卡在线育儿（神威组对七班的心理辅导）
 
@@ -9,19 +9,13 @@
 我把六代目的脑子治坏了 的后续。但可独立成篇。
 
 私设：共生体仅能探知宿主的表层意愿  
-
-
-
-
-
-
-
+<br/>
 鸣人和佐助吵架了。
-
-
-
+<br/>
+<br/>
+<br/>
 卡卡西觉得很头痛。这俩人已经年近二十，想当年从大蛇丸到封印辉夜姬经历了那么多事儿，胳膊都折了两条。原以为他们能稍微成长些，结果六道之力还只长在肌肉上，白痴还是那个白痴，中二病还是那个中二病。
-
+<br/>
 六代目就没指望这俩刚成年的毛孩子能给木叶重建大计帮多少忙，毕竟单算治国齐家的本事，他俩捏一块也比不上半个鹿丸。但是作为当今忍界的两大挂比，如果真在这片地界动起手来，那他这半年好不容易批得规划建筑方案也就白干了。
 
 
