--- a/关于异地（上）.md
+++ b/关于异地（上）.md
@@ -1,2 +1,2 @@
-[关于异地（上）](https://archiveofourown.org/works/20028229/chapters/47425159)
+[关于异地（上） 点我点我点我点我点我](https://archiveofourown.org/works/20028229/chapters/47425159)
 
